Fix CI config syntax

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -39,6 +39,6 @@ workflows:
   testing:
     jobs:
       - python-testing
-      - rust-testing
+      - rust-testing:
           requires:
             - python-testing
