More CI config tweaks..

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,6 +24,8 @@ jobs:
 
       - persist_to_workspace:
           root: examples
+          paths:
+            - output
 
   rust-testing:
     docker:
