Add scapy to Pipfile for pcap generation

--- a/Pipfile
+++ b/Pipfile
@@ -11,6 +11,7 @@ ietfdata = "*"
 requests = "*"
 e1839a8 = {path = "."}
 npt = {editable = true, path = "."}
+scapy = "*"
 
 [dev-packages]
 mypy = "*"
