--- a/tests/simple-protocol-testing/testharness/Cargo.toml
+++ b/tests/simple-protocol-testing/testharness/Cargo.toml
@@ -7,5 +7,5 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-draft_mcquistin_simple_example = { path = "../../output/draft/draft-mcquistin-simple-example/rust" }
+draft_mcquistin_simple_example = { path = "../../../examples/output/draft/draft-mcquistin-simple-example/rust" }
 pcap = "*"
