--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,7 +17,7 @@ jobs:
       - run:
           name: run tests
           command: |
-            pipenv run make unittests examples/output/draft/draft-mcquistin-simple-example/rust tests/simple-protocol-testing/pcaps
+            pipenv run make unittests examples/output/draft/draft-mcquistin-simple-example/rust tests/simple-protocol-testing/pcaps examples/output/draft/draft-mcquistin-augmented-udp-example/rust tests/udp-testing/pcaps
       - store_artifacts:
           path: test-results
           destination: test-results
