--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,6 +15,7 @@ jobs:
             sudo apt-get update
             sudo apt-get install curl
             curl https://sh.rustup.rs -sSf | sh -s -- -y
+            source $HOME/.cargo/env
             sudo pip install pipenv
             pipenv install --dev
       - run:
