--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,7 +6,7 @@ jobs:
       - image: circleci/python:3.7.2
 
     shell: /bin/bash
-        
+
     working_directory: ~/ips-protodesc-code
 
     steps:
@@ -17,7 +17,7 @@ jobs:
             sudo apt-get update
             sudo apt-get install curl
             curl https://sh.rustup.rs -sSf | sh -s -- -y
-            source $HOME/.cargo/env
+            echo 'export PATH=$HOME/.cargo/bin:$PATH' >> $BASH_ENV
             sudo pip install pipenv
             pipenv install --dev
       - run:
