Fix UDP test (failing constraint return Err, no longer panic)

--- a/tests/udp-testing/udp-testharness/Cargo.toml
+++ b/tests/udp-testing/udp-testharness/Cargo.toml
@@ -9,3 +9,4 @@ edition = "2018"
 [dependencies]
 draft_mcquistin_augmented_udp_example = { path = "../../../examples/output/draft/draft-mcquistin-augmented-udp-example/rust" }
 pcap = "*"
+matches = "*"
