Changes for Networking 2021 code deposit

--- a/.gitignore
+++ b/.gitignore
@@ -6,5 +6,6 @@ test-results/
 tests/udp-testing/pcaps
 tests/udp-testing/testharness/target
 tests/tcp-testing/testharness/target
+tests/793bis-testing/testharness/target
 tmp*
 examples/output
