--- a/Pipfile
+++ b/Pipfile
@@ -15,6 +15,8 @@ mypy = "*"
 jinja2 = "*"
 types-requests = "*"
 typed-ast = "*"
+spacy = "3.3.0"
+en_core_web_sm = { file = 'https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.3.0/en_core_web_sm-3.3.0.tar.gz' }
 
 [dev-packages]
 mypy = "*"
